# backtrader_plotly

./: .gitignore  README.md  main.py  my_plotter.py  my_scheme.py  setup.cfg
src/backtrader_plotly/: plotter.py  scheme.py
