[metadata]
name = backtrader_plotly
version = 1.5.0
author = Paul Lam
author_email = lamkashingpaul@gmail.com
description = Library replacing original matlibplot used by backtrader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lamkashingpaul/backtrader_plotly
license = GPLv3
project_urls =
    Bug Tracker = https://github.com/lamkashingpaul/backtrader_plotly/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src